# mobile-app

./: .env.local  .eslintrc.js  .gitignore  .jest-runner-eslintrc  .prettierignore  README.md  app.json  babel.config.js  babel.config.test.js  eas.json  jest.config.ts  jest.setup.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
.eas/workflows/: internal.yml  preview.yml  production.yml
.github/workflows/: tests.yml
android/: .gitignore  INSTALL_BUNDLETOOL.md  TEST_ASSET_DELIVERY_LOCALLY.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/facematch_models/: build.gradle
assets/images/: TabBG.tsx
ios/: IMT.swift  MrzScannerModule.m  MrzScannerModule.swift  NativeOperationsModule.m  NativeOperationsModule.swift  NoirModule.m  NoirModule.swift  PassportReaderModule.m  PassportReaderModule.swift  Podfile  Podfile.properties.json  Poseidon2.swift
modules/dg2-crop/rust/: .gitignore  Cargo.toml
modules/dg2-crop/rust/src/: lib.rs
modules/facematch/rust/: Cargo.toml  README.md
modules/facematch/rust/src/: facematch.rs  lib.rs  pose.rs
modules/facematch/rust/tests/: analyze_tests.rs
scripts/: README.md  build-android-release.sh  build-dg2-crop-android.sh  build-dg2-crop-ios.sh  build-dg2-crop.sh  build-facematch-android.sh  build-facematch-ios.sh  build-facematch.sh  build-ort.sh  download-facematch-models.sh  download-srs.sh  eas-preinstall.sh  setup-opencv-mobile.sh  setup-play-asset-delivery.sh  test-asset-delivery.sh  version.ts
tests/: errors.test.ts  passport-reader.test.ts  version-sync.test.ts
(+433 files in other folders)
